# agenda

./: CMakeLists.txt  README_design.md  relatorio_etapa1.md
design/: CMakeLists.txt  Makefile  README_CLI.md  README_GUI.md  cmake_install.cmake
design/include/: CLI.h  Calendar.h  Event.h  GUI.h  IPersistence.h  JsonPersistence.h  RecurrenceRule.h  Time.h  Time_x.h  User.h
design/src/: CLI.cpp  Calendar.cpp  Event.cpp  GUI.cpp  JsonPersistence.cpp  RecurrenceRule.cpp  Time_x.cpp  User.cpp  main.cpp  main_gui.cpp
relatorios/etapa_final/: relatorio_final.md
